finished my first assignment

--- a/index.html
+++ b/index.html
@@ -56,5 +56,25 @@
             <p>Programming Hero initiative.©2020 all rights reserved.</p>
         </div>
     </section>
+    <section class="Extra-section">
+        <h1 class="extra">Extra Section</h1>
+        <h2 class="extra">How to Code Custom <br>
+            Bulleted & Number System
+        </h2>
+        <div class="half-width">
+            <ol class="list-type">
+                <li><b>Lorem ipsum dolor sit amet.</b></li><br>
+                <li><b>consectetur adipisicing elit.</b> Quam veniam eum omnis excepturi similique facilis provident exercitationem,</li><br>
+                <li><b>End of orderlist</b></li>
+            </ol>
+        </div>
+        <div class="half-width">
+            <ul class="list-type">
+                <li><b>Lorem ipsum dolor sit amet.</b></li><br>
+                <li><b>consectetur adipisicing elit.</b> Quam veniam eum omnis excepturi similique facilis provident exercitationem,</li><br>
+                <li><b>End of unorderlist</b></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
