My fFirst personal website

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <img src="latest-work/work-3.jpg" alt="">
         </div>
     </section>
-    <section class="footer">
+    <section class="clint">
             <h1 class="foot">What Clint are say</h1>
             <h3>Md Rakibul Islam</h3>
             <p>Founder & CEO Alies</p>
@@ -51,9 +51,6 @@
         <div class="bottom">
             <p>Leave me a message in the</p>
             <h2>Programing.hero1@gmail.com</h2>
-        </div>
-        <div class="copy">
-            <p>Programming Hero initiative.©2020 all rights reserved.</p>
         </div>
     </section>
     <section class="Extra-section">
@@ -75,6 +72,9 @@
                 <li><b>End of unorderlist</b></li>
             </ul>
         </div>
+    </section>
+    <section class="footer">
+        <p>Programming Hero initiative.©2020 all rights reserved.</p>
     </section>
 </body>
 </html>
