My first personal website

--- a/index.html
+++ b/index.html
@@ -41,18 +41,6 @@
             <img src="latest-work/work-3.jpg" alt="">
         </div>
     </section>
-    <section class="clint">
-            <h1 class="foot">What Clint are say</h1>
-            <h3>Md Rakibul Islam</h3>
-            <p>Founder & CEO Alies</p>
-            <div class="first-part">
-                <q><b>Lorem ipsum dolor sit amet consectetur adipisicing Loremelit.<br> Officiis hic, excepturi ullam consectetur amet voluptas.</b></q>
-            </div>
-        <div class="bottom">
-            <p>Leave me a message in the</p>
-            <h2>Programing.hero1@gmail.com</h2>
-        </div>
-    </section>
     <section class="Extra-section">
         <h1 class="extra">Extra Section</h1>
         <h2 class="extra">How to Code Custom <br>
@@ -74,7 +62,19 @@
         </div>
     </section>
     <section class="footer">
+        <h1 class="foot">What Clint are say</h1>
+        <h3>Md Rakibul Islam</h3>
+        <p>Founder & CEO Alies</p>
+        <div class="first-part">
+            <q><b>Lorem ipsum dolor sit amet consectetur adipisicing Loremelit.<br> Officiis hic, excepturi ullam consectetur amet voluptas.</b></q>
+        </div>
+    <div class="bottom">
+        <p>Leave me a message in the</p>
+        <h2>Programing.hero1@gmail.com</h2>
+    </div>
+    <div class="right">
         <p>Programming Hero initiative.©2020 all rights reserved.</p>
-    </section>
+    </div>
+</section>
 </body>
 </html>
